nssfm-demo-ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nssfm-demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: demo1.skaylink.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodejsdemo-service
                port:
                  number: 80
          - path: /service2
            pathType: Prefix
            backend:
              service:
                name: nodejsdemo-service2
                port:
                  number: 80
